--- a/pom.xml
+++ b/pom.xml
@@ -14,18 +14,9 @@
 
 		<mule.version>3.9.0</mule.version>
 		<mule.tools.version>1.2</mule.tools.version>
-
-		<mule.env>${m.env}</mule.env>
-		<mule.secretKey>${m.secretKey}</mule.secretKey>
-
-		<cloudhub.company>${ch.company}</cloudhub.company>
-		<cloudhub.username>${ch.username}</cloudhub.username>
-		<cloudhub.password>${ch.password}</cloudhub.password>
-		<cloudhub.environment>${ch.environment}</cloudhub.environment>
-		<cloudhub.workerType>${ch.workerType}</cloudhub.workerType>
-		<cloudhub.workers>${ch.workers}</cloudhub.workers>
-		<cloudhub.redeploy>${ch.redeploy}</cloudhub.redeploy>
-	</properties>
+	<munit.version>1.3.7</munit.version>
+    <mule.munit.support.version>3.9.1</mule.munit.support.version>
+    </properties>
 
 	<build>
 		<plugins>
@@ -45,13 +36,13 @@
 				<configuration>
 					<deploymentType>cloudhub</deploymentType>
 					<!-- muleVersion is the runtime version as it appears on the CloudHub interface -->
-					<muleVersion>3.7.0</muleVersion>
-					<username>RyanCorrigal</username>
-					<password>Enlightened123!</password>
-					<redeploy>${cloudhub.redeploy}</redeploy>
-					<environment>Sandbox</environment>
-					<workerType>Micro</workerType>
-					<workers>1</workers>
+					<muleVersion>${cloudhubMuleVersion}</muleVersion>
+					<username>${cloudhubUsername}</username>
+					<password>${cloudhubPassword}</password>
+					<redeploy>${cloudhubRedeploy}</redeploy>
+					<environment>${cloudhubEnvironment}</environment>
+					<workerType>${cloudhubWorkerType}</workerType>
+					<workers>${cloudhubWorkers}</workers>
 				</configuration>
 				<executions>
 					<execution>
@@ -105,8 +96,38 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
-	</build>
+		<plugin>
+                <groupId>com.mulesoft.munit.tools</groupId>
+                <artifactId>munit-maven-plugin</artifactId>
+                <version>${munit.version}</version>
+                <executions>
+                    <execution>
+                        <id>test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <coverage>
+                        <runCoverage>true</runCoverage>
+                        <formats>
+                            <format>html</format>
+                        </formats>
+                    </coverage>
+                </configuration>
+            </plugin>
+        </plugins>
+	<testResources>
+            <testResource>
+                <directory>src/test/munit</directory>
+            </testResource>
+        <testResource>
+                <directory>src/test/resources</directory>
+            </testResource>
+        </testResources>
+    </build>
 
 	<!-- Mule Dependencies -->
 	<dependencies>
@@ -214,7 +235,19 @@
 			<artifactId>mule-module-security-property-placeholder</artifactId>
 			<version>1.4.0</version>
 		</dependency>
-	</dependencies>
+	<dependency>
+            <groupId>com.mulesoft.munit</groupId>
+            <artifactId>mule-munit-support</artifactId>
+            <version>${mule.munit.support.version}</version>
+            <scope>test</scope>
+        </dependency>
+    <dependency>
+            <groupId>com.mulesoft.munit</groupId>
+            <artifactId>munit-runner</artifactId>
+            <version>${munit.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<repositories>
 		<repository>
@@ -229,11 +262,7 @@
 			<url>http://repository.mulesoft.org/releases/</url>
 			<layout>default</layout>
 		</repository>
-		<!--<repository>
-			<id>mule-ee-releases</id>
-			<name>MuleEE Releases Repository</name>
-			<url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url>
-		</repository>-->
+		<!--<repository> <id>mule-ee-releases</id> <name>MuleEE Releases Repository</name> <url>https://repository-master.mulesoft.org/nexus/content/repositories/releases-ee/</url> </repository> -->
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
